--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 /*login-btn-border: #00AEDC*/
 /*user-img-border: #F3F8F9*/
 /*card-bg: #F9F9FA*/
+/*box-shadow: #F0F0F3*/
 
 
 *{
@@ -18,13 +19,10 @@
     align-items: stretch;
     box-shadow: 5px 10px 18px #F0F0F3;
 }
-
-
 .header__logo{
     margin: 15px;
     display: block;
     align-self: flex-start;
-
 }
 .header__box-logIn{
     padding:  15px 25px 15px;
@@ -56,7 +54,6 @@
     background: white;
     box-shadow: 5px 10px 18px #dbd6d6;
 }
-
 .main {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -76,10 +73,56 @@
         grid-template-columns: 1fr;
         grid-template-rows: auto auto auto;
         grid-template-areas:
+      "header"
       "profile"
       "aside"
       "gallery"
       "reviews";
+    }
+    .main__title{
+        display: grid;
+    }
+    .profile__text{
+        font-size: 10px;
+    }
+    main .profile__text__paragraph{
+        font-size: 13px;
+    }
+    main .h2{
+        font-size: 17px;
+    }
+    .reviews__navigation{
+        display: none;
+    }
+    main>.maine__article--profile{
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows:  3fr 1fr 6fr 1fr;
+    }
+    .profile>.profile__img{
+        grid-column: 3;
+        grid-row: 1/2;
+        margin: 0 auto;
+    }
+    .profile>.profile__div__icons{
+        grid-column: 3;
+        grid-row: 2/3;
+        margin: 0 5px;
+    }
+    .profile>.profile__text{
+        grid-column: 1/-1;
+        grid-row: 3/4;
+    }
+    .profile>.profile__button-container{
+        grid-column: 1/-1;
+        grid-row: 4/5;
+    }
+    .gallery>.gallery__container>img{
+        display: flex;
+        height: 150px;
+        width: 150px;
+    }
+    .main>.reviews>h2,.main>.gallery>h2,.main>.aside>h2,.profile>.profile__text>h2{
+        font-size: 15px;
     }
 }
 
@@ -93,7 +136,6 @@
     grid-template-rows: 50% 25% 25%;
     padding: 4%;
     gap: 10px;
-
 }
 .profile__img{
     grid-column: 1/2;
@@ -106,8 +148,6 @@
     align-items: center;
     border: #F3F8F9 10px solid;
     border-radius: 50%;
-
-
 }
 .profile__text{
     padding: 0 20px;
@@ -144,17 +184,13 @@
     font-family: 'Poppins';
     font-weight: 600;
     align-items: center;
-
 }
-
-
 
 /*gallery*/
 
 .mine__section__gallery{
     padding: 4%;
     grid-area: gallery;
-
 }
 .mine__section__gallery>h2{
     font-weight: 600;
@@ -167,7 +203,6 @@
     background-size: cover;
     background-position: center;
     margin: 5px;
-
 }
 .gallery__container{
     display: flex;
@@ -175,6 +210,7 @@
 }
 
 /*reweiws table*/
+
 .main__section__reviews{
     grid-area: reviews;
 }
@@ -187,7 +223,6 @@
     font-weight: 600;
     font-size: 19px;
 }
-
 .reviews__section{
     display: flex;
     justify-content: space-between;
@@ -198,7 +233,6 @@
 }
 .reviews__section:last-child{
     border-bottom: none;
-
 }
 .reviews_pic{
     width: 80px;
@@ -207,10 +241,8 @@
     background-position: center;
     background-size: cover;
     border:solid  10px #F3F8F9;
-
     align-items: center;
 }
-
 .reviews__section__content{
     width: 80%;
     display: flex;
@@ -220,11 +252,10 @@
 .reviews__section__content>h3{
     display: inline;
     font-weight: 600;
-
-
 }
 .reviews__section__stars{
     display: inline;
+    width: 100px;
 }
 .reviews__section__content__paragraph{
     margin: 15px auto;
@@ -232,14 +263,12 @@
     line-height: 1.2;
     font-size: 16px;
 }
-
 .reviews__section__prof-picture01{
     background-image: url("img/profile-picture01.jpeg");
 }
 .reviews__section__prof-picture02{
     background-image: url("img/profile-picture02.jpeg");
 }
-
 .reviews__navigation{
     margin: 0 auto;
     position: relative;
@@ -248,8 +277,6 @@
     list-style: none;
     text-align: center;
     display: inline;
-    /*height: 100px;*/
-
 }
 .reviews__navigation__list>li {
     display: inline;
@@ -262,26 +289,22 @@
     letter-spacing: 2px;
     font-size: 18px;
     color: #C9D3D9;
-
 }
 .navigation__cursor{
     position: absolute;
     left: 52.5%;
     top: 70%;
     transform: translate(-70%, -45%)
-
 }
 .list__item--cursor{
     font-weight: 900;
     width: 20px;
     height: 20px;
     display: inline;
-
 }
 .list__item--cursor>span{
     font-weight: 900;
 }
-
 .reviews__input-comment{
     margin: 40px 0;
     position: relative;
@@ -314,9 +337,7 @@
 .reviews__input__button-flex{
     display: flex;
     justify-content: flex-end;
-
 }
-
 .reviews__input__button-flex>button{
     width: 130px;
     height: 37px;
@@ -330,21 +351,22 @@
     background: #00AEDC ;
     color: azure;
 }
+
 /*aside-bar*/
+
+.main__title{
+    grid-area: header;
+    display: none;
+}
 .main__aside{
     grid-area: aside;
     padding: 8%;
-    /*display: flex;*/
-    /*flex-direction: column;*/
-
-
 }
 .aside__title{
     display: flex;
     flex-wrap: wrap;
     padding-bottom: 10px;
     border-bottom: solid #F2F2F3 1px;
-    /*padding: 0 0 20px 0;*/
 }
 .aside>div,h2{
     margin-bottom: 20px;
@@ -355,7 +377,6 @@
     width: 75px;
     border-radius: 50%;
     background-size: cover;
-
 }
 .aside__title>h1{
     display: inline;
@@ -363,7 +384,6 @@
     text-align: left;
     width: 60%;
     margin: auto 15px;
-
 }
 .aside>h2{
     margin: 0 0 30px 0;
@@ -378,22 +398,17 @@
     display: block;
 }
 .aside__cards__box-time--yellow{
-
     background: #f5b118;
-
-
 }
 .time-box>div{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
 }
 .time-box span{
     font-size: 12px;
 }
-
 .card{
     display: flex;
     /*flex-wrap: wrap;*/
@@ -413,14 +428,12 @@
 .aside__cards--first-blue>div:first-child{
     border-right: #8cdbef 1px solid;
 }
-
 .aside__cards__left-box>h3{
     font-size: 13px;
     font-weight: 500;
     margin: 15px 5px 30px;
     text-align: center;
 }
-
 .time-box{
     margin: 20px 10px 5px 10px;
     height: 50px;
@@ -444,7 +457,6 @@
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
-
 .aside__cards__box-textarea{
     width: 75%;
     font-weight: 300;
@@ -460,7 +472,6 @@
 }
 .card__textarea--bold{
     font-weight: 700;
-
 }
 .aside__cards__button>button{
     width: 100%;
